Added loading screen and saving places details info

--- a/src/main/java/org/pavel/yanushka/client/resource/GwtWebAppStyles.css
+++ b/src/main/java/org/pavel/yanushka/client/resource/GwtWebAppStyles.css
@@ -68,3 +68,9 @@
 	border: 1px solid #4D90FE;
 	outline: medium none;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
